[package]
name = "hexga_generational"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = ["generational", "genvec", "slotmap", "multi-agent-system"]
description = "GenVec, ideal for MAS (Multi-Agent System), where each agent can be removed at any time and has references to other agents."
categories = ["rust-patterns", "data-structures"]

[features]
default = ["serde"]

serde = ["dep:serde",
    "hexga_core/serde"
]


[dependencies]
hexga_core.workspace = true
hexga_number.workspace = true

serde = { version = "1.0.0", features = ["derive"], optional = true }

#typed_index = "0.2.1"

