[package]
name = "hexga_generational"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = ["generational", "genvec", "slotmap", "multi-agent-system"]
description = "GenVec, ideal for MAS (Multi-Agent System), where each agent can be removed at any time and has references to other agents."
categories = ["rust-patterns", "data-structures"]

[features]
default = ["serde", "hexga_array_vec"]

serde = ["dep:serde",
    "hexga_core/serde",
    "hexga_array_vec/serde",
]

serde_rc = ["serde/rc",
  "hexga_core/serde_rc", "hexga_array_vec/serde_rc"]

hexga_array_vec = ["dep:hexga_array_vec"]

[dependencies]
hexga_core.workspace = true
hexga_number.workspace = true
hexga_array_vec = { workspace = true, optional = true }

serde = { version = "1.0.0", features = ["derive"], optional = true }

[dev-dependencies]
hexga_array_vec.workspace = true
#typed_index = "0.2.1"

