[package]
name = "hexga_graphics"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = ["graphics"]
description = "A crate to handle graphics stuff like loading / saving image"
categories = ["graphics"]

[features]
default = [
    "serde", "hexga_io",
    "int_are_32_bits", "float_are_32_bits"
]

int_are_8_bits    = ["hexga_math/int_are_8_bits"]
int_are_16_bits   = ["hexga_math/int_are_16_bits"]
int_are_32_bits   = ["hexga_math/int_are_32_bits"]
int_are_64_bits   = ["hexga_math/int_are_64_bits"]
int_are_size_bits = ["hexga_math/int_are_size_bits"]

float_are_32_bits   = ["hexga_math/float_are_32_bits"]
float_are_64_bits   = ["hexga_math/float_are_64_bits"]
float_are_size_bits = ["hexga_math/float_are_size_bits"]

serde = ["dep:serde", "hexga_io",
    "hexga_core/serde",
    "hexga_math/serde"
]
hexga_io = ["dep:hexga_io", "serde",
    "hexga_core/hexga_io",
    "hexga_math/hexga_io"
]



[dependencies]
hexga_core.workspace = true
hexga_math.workspace = true
hexga_io = { workspace = true, optional = true }


serde = { version = "1.0.0", features = ["derive"], optional = true }
image = { version = "0.25.4", default-features = false, features = ["png", "gif", "jpeg"] }
