[package]
name = "hexga_io"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = []
description = "io file abstraction based on serde to allow loading/saving/converting bytes with a custom extension"
categories = ["filesystem", "encoding"]

[features]
default = ["serde"]

serde = ["dep:serde",
    "dep:ron",
    "dep:serde_json",
    #"dep:serde-xml-rs",
    "dep:bincode",
]

[dependencies]
serde = { version = "1.0.0", optional = true }

base64 = "0.22.1"

#hexga_core.workspace = true

# markup language :
ron = { version = "0.11.0", optional = true }
serde_json = { version = "1.0.133", optional = true }
# serde-xml-rs = { version = "0.8.1", optional = true }
bincode = { version = "1.3.3", optional = true }
