[package]
name = "hexga_io"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = []
description = "io file abstraction based on serde to allow loading/saving/converting bytes with a custom extension"
categories = ["filesystem", "encoding"]

[features]
default = ["serde", "serde_rc"]

serde = ["dep:serde", "hexga_encoding/serde"]

serde_rc = ["serde/rc", "hexga_encoding/rc"]

[dependencies]
hexga_encoding.workspace = true
serde = { version = "1.0.0", optional = true }

base64 = "0.22.1"