[package]
name = "hexga_map_on"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = ["map_on", "macro", "no-std"]
description = "Define the map_on! macro that can be used to impl a lot of trait quickly using macros."
categories = ["rust-patterns"]

[dependencies]
