[package]
name = "hexga_math"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = ["math", "vector", "matrix", "rectangle"]
description = "Math related crate that support multi dimensionnal vector, matrix, rectangle..."
categories = ["mathematics", "data-structures"]

[features]
default = ["serde", "int_are_32_bits", "float_are_32_bits"]

int_are_8_bits    = ["hexga_typedef/int_are_8_bits"]
int_are_16_bits   = ["hexga_typedef/int_are_16_bits"]
int_are_32_bits   = ["hexga_typedef/int_are_32_bits"]
int_are_64_bits   = ["hexga_typedef/int_are_64_bits"]
int_are_size_bits = ["hexga_typedef/int_are_size_bits"]

float_are_32_bits   = ["hexga_typedef/float_are_32_bits"]
float_are_64_bits   = ["hexga_typedef/float_are_64_bits"]
float_are_size_bits = ["hexga_typedef/float_are_size_bits"]

serde = ["dep:serde"]

[dependencies]
hexga_number.workspace = true
hexga_array.workspace = true
hexga_typedef.workspace = true

have_len = "0.1.0"

# serialization
serde = { version = "1.0", features = ["derive"], optional = true}
