[package]
name = "hexga_math_derive"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = ["array"]
description = "Math proc macro"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
hexga_number.workspace = true

serde = { version = "1.0.0", features = ["derive"], optional = true }

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"