[package]
name = "hexga_number"
version = "0.0.1"
edition = "2024"
authors = ["Mewily <thomas.mewily@gmail.com>"]
keywords = ["math", "number"]
description = "Provide basic trait and constant for number, and the macro map_on!."
license = "MIT OR Apache-2.0"
categories = ["mathematics", "rust-patterns"]
repository = "https://github.com/Thomas-Mewily/hexga_number"

[dependencies]
