[package]
name = "hexga_number"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = ["math", "number"]
description = "Provide basic trait and constant for number, and the macro map_on!."
categories = ["mathematics", "rust-patterns"]

[dependencies]
hexga_base.workspace = true
